добавил Oracle запросы